# habits

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
config/: settings.py  urls.py
habits/: admin.py  models.py  paginations.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/management/commands/: send_test_message.py
habits/migrations/: 0001_initial.py
html/: index.html
nginx/: Dockerfile  nginx.conf
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
