[tool.poetry]
name = "project-habits"
version = "0.1.0"
description = "Бэкенд-часть SPA веб-приложения Трекер привычек"
authors = ["Valiantsina Ausianik <forovp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.4.0"
drf-yasg = "^1.21.8"
django-filter = "^24.3"
django-cors-headers = "^4.6.0"
pillow = "^11.1.0"
django-extensions = "^3.2.3"
coverage = "^7.6.10"
requests = "^2.32.3"
celery = "^5.4.0"
redis = "^5.2.1"
eventlet = "^0.38.2"
django-celery-beat = "^2.7.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.14.1"
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py

)
'''

[tool.isort]
# максимальная длина строки
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
